tests/sources/invalid/array_edge_invalid.fire
// Invalid array edge scenarios
// EXPECT: errors about arrays

print("-- invalid: array access out of bounds is runtime (may not be caught at compile) so skip actual index > length --");

print("-- invalid: array literal empty then inferred wrongly use as int --");
int32[] e = []; // fine
int32 bad = e; // error: assigning array to int32

print("-- invalid: array method unknown --");
int32[] nums = [1];
nums.remove(1); // remove not currently implemented in parser type check -> should error unknown method (or method unsupported)
nums.sort(); // sort not implemented

print("-- invalid: array literal with array element --");
int32[] bad2 = [[1,2]]; // nested array not allowed

print("-- invalid array edge tests end --");
